First Prototype complete

--- a/sugar2/dashboard/templates/list.html
+++ b/sugar2/dashboard/templates/list.html
@@ -1,43 +1,85 @@
-<table>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <title>Sugar Free Welcome {{user}}</title>
+  </head>
+  <body class="bg-warning">
+      <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/dashview">Sugar Free</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/dashview">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashview/listview">List View</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login/log_out">Log out</a>
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+
+<table class = "table-success">
     <thead>
-        <tr>
-            <th>Glucose Readings</th>
-            </tr>
+        <tr class="table-success">
+            <th class="table-success">Blood Glucose (mg/dl)</th>
+            <th class="table-success"> Time </th>
+          </tr>
+
         </thead>
-        <tbody>
+        <tbody class="table-success">
             {% for user_reading in user_reading %}
             <tr>
 
                     <td>{{user_reading.reading}}</td>
-                    <!--<td><input type="hidden" name="price" value="{{product.price}}">{{product.price}}</td>-->
+                    <td>{{user_reading.time}}</td>
 
-              
+
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <table>
+    <table class = "table-success">
         <thead>
             <tr>
-                <th>Insulin Dosages</th>
+                <th>Insulin Dose</th>
+                <th>Time</th>
                 </tr>
             </thead>
             <tbody>
                 {% for user_dose in user_dose %}
                 <tr>
 
-                        <td>{{user_dose.dose}}</td>                      <!--<td><input type="hidden" name="price" value="{{product.price}}">{{product.price}}</td>-->
-
+                        <td>{{user_dose.dose}}</td>
+                        <td>{{user_dose.time}}</td>
 
 
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <table>
+        <table class = "table-success">
             <thead>
                 <tr>
-                    <th>Macronutrient Count</th>
+                    <th> Fat (g) </th>
+                    <th> Carb (g) </th>
+                    <th> Protein (g)</th>
+                    <th> Time </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,6 +89,7 @@
                             <td>{{user_macro.fat}}</td>
                             <td>{{user_macro.carb}}</td>
                             <td>{{user_macro.protein}}</td>
+                            <td>{{user_macro.time}}</td>
                             <!--<td><input type="hidden" name="price" value="{{product.price}}">{{product.price}}</td>-->
 
 
@@ -55,3 +98,5 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
